--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cached_network_image: ^3.2.3
   localstorage: ^4.0.1+4
   fl_chart: ^0.63.0
+  font_awesome_flutter: ^10.5.0
 
 
 
